# TRAM8-4x4

./: .gitignore  README.md
.github/workflows/: static.yml
FW SYSEX FILES/: tram8_4x4_fw1.syx  tram8_4x4_fw2.syx  tram8_4x4_fw3.syx  tram8_4x4_fw4.syx  tram8_4x4_fw5.syx  tram8_firmware_4x4_v1.syx
FW-4x4 HTML FILES/: index.html  latest.html  tram8_4x4_fw1.html  tram8_4x4_fw1a.html  tram8_4x4_fw2.html  tram8_4x4_fw3.html  tram8_4x4_fw4.html  tram8_4x4_fw5.html
FourByFour/HTML-UI/: README.md  gen_html.py
FourByFour/Tram8/: LEDs.c  MAX5825.c  MAX5825.h  MIDI.h  buttons.h  main.c
FourByFour/cmake/: Toolchain.cmake
Stock Release/StockFW V1.3/: CMakeLists.txt
